Ensure LegacyRenderWidgetHostHWND is always created.

Previously, LegacyRenderWidgetHostHWND was only created inside
RenderWidgetHostViewAura::InternalSetBounds, and only if the parent
HWND was known. However, under some circumstances, InternalSetBounds
only gets called once and it gets called *before* the aura Window is
attached, so the legacy win never gets created.

Fix it by also trying to create the legacy win in
RWHVA::AddedToRootWindow().

BUG=613336

Review-Url: https://codereview.chromium.org/1996163002
Cr-Commit-Position: refs/heads/master@{#395649}

Former-commit-id: a7e78f6f5d453c52313b74de10c5f680aa3d5ee3